# aggregate

./: .gitignore  CONTRIBUTING.md  INSTALL.md  Makefile  README.md  TREE.md  __main__.py  output.html  processor.py  pyproject.toml  requirements.txt  setup.py  setup.sh  test.md
docs/: index.md
docs/architecture/: overview.md  pipeline.md
docs/development/: documentation-guide.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
enclose/: __main__.py
enclose/converters/: markdown_converter.py  pdf_converter.py
enclose/core/: document_processor.py
enclose/utils/: __init__.py  file_utils.py  file_validation.py  html_utils.py  metadata_utils.py
output/: dashboard.html  invoice_example.md  metadata.json  svg_search_results.json
processor/: __main__.py
processor/converters/: __init__.py  markdown_converter.py  pdf_converter.py
processor/core/: __init__.py  document_processor.py
processor/utils/: __init__.py  html_utils.py  ocr_processor.py
scripts/: arch.sh  enclose  fedora.sh  generate_test_files.py  install.sh  opensuse.sh  ubuntu.sh  validate_conversions.py
src/processor/: __init__.py  __main__.py
src/processor/core/: document_processor.py
test_files/: test.html  test.md
tests/: conftest.py  test_cli.py  test_document_processor.py  test_file_formats.py  test_file_utils.py  test_html_utils.py  test_markdown_converter.py  test_metadata_utils.py  test_ocr_processor.py  test_pdf_converter.py  test_svg_to_png.py
