[project]
name = "enclose"
version = "1.0.0"
description = "A modular document processing pipeline for Markdown to PDF/SVG/PNG conversion with OCR"
authors = [
    { name = "Tom", email = "info@softreck.dev" }
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/veridock/aggregate"

[project.scripts]
process-documents = "processor.__main__:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]

[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["processor", "processor.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["processor.py"]
source-distribution.include = ["processor.py"]
